--- a/interface/created.html
+++ b/interface/created.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css" id="light-theme">
+    <link rel="stylesheet" href="css/dark.css" type="text/css" id="dark-theme">
 </head>
 <body>
     <header>
+        
         <div id="nav-logo-wrapper">
             <img src="images/logo.png" alt="Deless" id="nav-logo-image" height=100px>
         </div>
@@ -16,7 +18,7 @@
            <div class="nav-item"><a href="#" class="active">Главная</a></div>
            <div class="nav-item"><a href="#">Ваши ссылки</a></div>
            <div class="nav-item"><a href="#">Платон Лукьянов</a></div>
-          
+            <div class="nav-item"><img src="images/theme/light_mode.svg" alt="" id="theme-changer"></div>
         </div>
     </header>
     <div id="content">
@@ -30,9 +32,11 @@
         <div id="information">
             <h2>Хотите иметь доступ к <span class="underline-select">статистике</span> своей ссылки?</h2>
             <p><a href=""class="login-link">Зарегистрируйтесь</a> или <a href="" class="login-link">войдите</a> в свой аккаунт, а затем на вкладке "Ваши ссылки" 
-                добавьте вашу ссылку с помощью секретного кода: <input type="password" name="" class="adapt" id="secret-key" value="secret" size="" disabled ><img src="images/visibility/unvisible.svg" alt="Скрыть/Показать" id="visibility"></p>
+                добавьте вашу ссылку с помощью секретного кода: <span id="secret-with-control"><input type="password" name="" class="adapt" id="secret-key" value="secret" size="" disabled ><img src="images/visibility/unvisible.svg" alt="Скрыть/Показать" id="visibility"></span></p>
         </div>
     </div>
+    <script src="js/theme.js"></script>
+    <script src="js/theme-control.js"></script>
     <script src="js/selection.js"></script>
     <script src="js/copy-btn.js"></script>
     <script src="js/visibility.js"></script>
