--- a/interface/index.html
+++ b/interface/index.html
@@ -21,7 +21,7 @@
         </div>
     </header>
 
-    <div id="content">
+    <section id="content">
             <div id="short-description">
                 <h1 id="site-name">deless</h1>
                 <p id="mini-description">Абсолютно бесплатный быстрый сокращатель ссылок с возможностью аналитики.</p>
@@ -37,7 +37,18 @@
                     <input type="submit" value="Сократить!" class="btn shorten-btn">
                 </form>
             </div>
-    </div>
+        </section>
+        <footer>
+            
+            <div id="social">
+                <div><a href="mailto:platonlukyanoff@ya.ru" target="blank"><img src="images/social/email.svg" alt="Почта" class="social-icon"></a></div>
+                <div><a href="https://github.com/platonlukyanov/deless-url-shortener"target="blank"><img src="images/social/github.svg" alt="GitHub" class="social-icon"></a></div>
+                <div><a href="https://twitter.com/LukyanovPlaton" target="blank"><img src="images/social/twitter.svg" alt="Twitter" class="social-icon"></a></div>
+                <div><a href="https://vk.com/liristium" target="blank"><img src="images/social/vk.svg" alt="ВКонтакте" class="social-icon"></a></div>
+                <div><a href="https://t.me/platonlukyanov"target="blank"><img src="images/social/telegram.svg" alt="Телеграм" class="social-icon"></a></div>
+                
+            </div>
+        </footer>
     <script src="js/theme.js"></script>
     <script src="js/theme-control.js"></script>
     <script src="js/typewriter.js"></script>
