--- a/interface/created.html
+++ b/interface/created.html
@@ -21,7 +21,7 @@
             <div class="nav-item"><img src="images/theme/light_mode.svg" alt="" id="theme-changer"></div>
         </div>
     </header>
-    <div id="content">
+    <section id="content">
         <h1 id="your-link">Ваша ссылка:</h1>
         <div id="target-box">
             <div id="shorted">
@@ -34,7 +34,18 @@
             <p><a href=""class="login-link">Зарегистрируйтесь</a> или <a href="" class="login-link">войдите</a> в свой аккаунт, а затем на вкладке "Ваши ссылки" 
                 добавьте вашу ссылку с помощью секретного кода: <span id="secret-with-control"><input type="password" name="" class="adapt" id="secret-key" value="secret" size="" disabled ><img src="images/visibility/unvisible.svg" alt="Скрыть/Показать" id="visibility"></span></p>
         </div>
-    </div>
+    </section>
+    <footer>
+            
+        <div id="social">
+            <div><a href="mailto:platonlukyanoff@ya.ru" target="blank"><img src="images/social/email.svg" alt="Почта" class="social-icon"></a></div>
+            <div><a href="https://github.com/platonlukyanov/deless-url-shortener"target="blank"><img src="images/social/github.svg" alt="GitHub" class="social-icon"></a></div>
+            <div><a href="https://twitter.com/LukyanovPlaton" target="blank"><img src="images/social/twitter.svg" alt="Twitter" class="social-icon"></a></div>
+            <div><a href="https://vk.com/liristium" target="blank"><img src="images/social/vk.svg" alt="ВКонтакте" class="social-icon"></a></div>
+            <div><a href="https://t.me/platonlukyanov"target="blank"><img src="images/social/telegram.svg" alt="Телеграм" class="social-icon"></a></div>
+            
+        </div>
+    </footer>
     <script src="js/theme.js"></script>
     <script src="js/theme-control.js"></script>
     <script src="js/selection.js"></script>
